panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arithmetic__test_arithmetic_between_const_and_nonconst.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `int const` (42 `int`))
         (definition y~3 `int` (27 `int`))
         (return (add `int` (x~2 `int const`) (y~3 `int`))))))

----- stderr -----
