panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arithmetic__test_lengthof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arithmetic/test_lengthof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_lengthof.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (expression (0 `int`))
         (definition xs~2 `array<int; 2>`
            (braced
               (subobject +0 (1 `int`))
               (subobject +4 (2 `int`))))
         (expression (0 `int`))
         (return (truncate `int` (lengthof `unsigned long` 2 (xs~2 `array<int; 2>`)))))))

----- stderr -----
