panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arithmetic__test_postincrement.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arithmetic/test_postincrement.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_postincrement.c"
   (declaration external putchar~0 `fn(∅: int) -> int` ∅)
   (declaration external printf~1 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      f~2 `fn(p: ptr<int>) -> ptr<int>`
      (params
         p~4 `ptr<int>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (putchar~0 `fn(∅: int) -> int`))
               (65 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: int) -> int>`
                  (putchar~0 `fn(∅: int) -> int`))
               (10 `int`)))
         (return (p~4 `ptr<int>`))))
   (function-definition external
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (definition x~9 `int` (42 `int`))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~8 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (combine `int`
                  (combine `int`
                     (combine `int`
                        (assign `ptr<int>` (unnamed-temporary~11 `ptr<int>`)
                           (addressof `ptr<int>`
                              (x~9 `int`)))
                        (assign `int` (unnamed-temporary~12 `int`) (deref `int` (unnamed-temporary~11 `ptr<int>`))))
                     (combine `int`
                        (assign `ptr<int>` (unnamed-temporary~10 `ptr<int>`)
                           (addressof `ptr<int>`
                              (deref `int` (unnamed-temporary~11 `ptr<int>`))))
                        (assign `int` (deref `int` (unnamed-temporary~10 `ptr<int>`)) (add `int` (deref `int` (unnamed-temporary~10 `ptr<int>`)) (++ `int`)))))
                  (unnamed-temporary~12 `int`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~8 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (x~9 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~8 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (combine `int`
                  (combine `int`
                     (combine `int`
                        (assign `ptr<int>` (unnamed-temporary~14 `ptr<int>`)
                           (addressof `ptr<int>`
                              (deref `int`
                                 (call `ptr<int>`
                                    (addressof `ptr<fn(p: ptr<int>) -> ptr<int>>`
                                       (f~2 `fn(p: ptr<int>) -> ptr<int>`))
                                    (addressof `ptr<int>`
                                       (x~9 `int`))))))
                        (assign `int` (unnamed-temporary~15 `int`) (deref `int` (unnamed-temporary~14 `ptr<int>`))))
                     (combine `int`
                        (assign `ptr<int>` (unnamed-temporary~13 `ptr<int>`)
                           (addressof `ptr<int>`
                              (deref `int` (unnamed-temporary~14 `ptr<int>`))))
                        (assign `int` (deref `int` (unnamed-temporary~13 `ptr<int>`)) (add `int` (deref `int` (unnamed-temporary~13 `ptr<int>`)) (++ `int`)))))
                  (unnamed-temporary~15 `int`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~8 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (x~9 `int`)))
         (return (x~9 `int`)))))

----- stderr -----
