panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arithmetic__test_ptrdiff_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c"
   (declaration external calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition array~3 `ptr<int>`
            (noop-type-conversion `ptr<int>`
               (call `ptr<void>`
                  (addressof `ptr<fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>>`
                     (calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>`))
                  (sign-extend `unsigned long` (42 `int`))
                  (sizeof `unsigned long` 4 (deref `int` (array~3 `ptr<int>`))))))
         (definition ptrdiff~4 `unsigned long`
            (noop-type-conversion `unsigned long`
               (ptr-diff `long`
                  (addressof `ptr<int>`
                     (deref `int` (ptr-add `ptr<int>` (array~3 `ptr<int>`) (sign-extend `long` (10 `int`)))))
                  (addressof `ptr<int>`
                     (deref `int` (ptr-add `ptr<int>` (array~3 `ptr<int>`) (sign-extend `long` (0 `int`))))))))
         (return (truncate `int` (ptrdiff~4 `unsigned long`))))))

----- stderr -----
